--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.13.7",
     "@mui/material": "^5.13.7",
+    "@react-pdf/renderer": "^4.3.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "lucide-react": "^0.477.0",
+    "pdfjs-dist": "^2.16.105",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
     "react-icons": "^5.5.0",
+    "react-pdf": "^10.0.1",
     "react-router-dom": "^6.30.0",
     "react-scripts": "5.0.1",
     "sweetalert2": "^11.17.2",
