--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Ximena0143.github.io/Front_Psiregistro",
+  "homepage": "https://ximena0143.github.io/Front_Psiregistro",
   "name": "psiregistro",
   "version": "0.1.0",
   "private": true,
